Fixing ui layout issues with footer

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -1,7 +1,3 @@
-.container {
-    top: -75px;
-}
-
 .navbar-header {
     border-bottom: 1px lightgray solid;
     margin-bottom: 5px;
@@ -16,7 +12,6 @@
 #sidebar {
     background-color: #f5f5f5;
     padding-right: 0px;
-    top:-75px;
     height: 100vh;
     box-shadow: 3px 3px 9px 0px lightgrey
 
@@ -68,10 +63,9 @@
   background-color: #f5f5f5;
   color:#1e2433;
   text-align: center !important;
-  bottom: 55;
   width: 100%; /* Set the fixed height of the footer here */
   height: 60px;
-  line-height: 70px; /* Vertically center the text there */
+  line-height: 60px; /* Vertically center the text there */
  }
 
 a {
@@ -117,7 +111,11 @@ a:hover {
 
 #logo {
     padding: 0px;
-
+    top: 3px;
+    position: absolute;
+    right: 3px;
+    background-color: white;
+    z-index: 100;
 }
 
 #logo img {
@@ -126,3 +124,6 @@ a:hover {
     box-shadow: -4px 4px 8px 2px lightgrey;
 }
 
+.bottom-buffer {
+    margin-bottom: 60px;
+}
